background image and search icon

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -738,9 +738,9 @@ input[type="submit"]:focus,
 
 .search-box{
   position: relative;
-  height: 50px;
-  width: 100%;
-  margin: 2% auto;
+  height: 35px;
+  width: 400px;
+  margin: 0 auto;
   text-align: center;
 
 }
