background image and search icon

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -786,8 +786,7 @@ input[type="search"]::-webkit-search-cancel-button, {
   z-index: 3;
   background-color: #A6ADED;
   box-shadow: 5px 5px 5px #848ABD;
-  left: 40%;
-  right: 40%;
+  left: 25px;
   text-align: center;
   padding-left: 0px;
   font-size: 20px;
