--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -930,3 +930,16 @@ background-color: #8d6ec6;
   font-size: 20px;
   font-weight: bold;
 }
+
+.artist-icon {
+  max-width: 100px;
+  max-height: 100px;
+  display: block;
+  margin: 0 auto;
+}
+
+.artist-image{
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+}
