--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -244,14 +244,14 @@ input[type="submit"]:focus,
 
 .welcome {
   font-family: 'Inconsolata';
-  background-image: url('images.jpeg');
-  background-size: 200px 80px;
+  background-image: url("images.jpeg");
+  background-size: contain;
   padding-top: 10px;
   color: white;
   text-shadow: 2px 2px 1px black;
   text-align: center;
   display: block;
-  height: 50px;
+  height: 150px;
   width: 40%;
   min-width: 741px;
   margin: 0 auto;
@@ -260,11 +260,12 @@ input[type="submit"]:focus,
   border-left: 2px solid #483d8b;
   border-right: 2px solid #483d8b;
   box-shadow: 5px 5px 5px 0px #947DC4;
+  padding: 30px;
 }
 
 .welcome-text{
   display: block;
-  font-size: 24px;
+  font-size: 60px;
 }
 
 .explanation-box{
@@ -283,7 +284,7 @@ input[type="submit"]:focus,
 .annotate-the-world{
   padding-top: 20px;
   display: block;
-  font-size: 18px;
+  font-size: 28px;
 }
 
 .explanation{
