--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -764,6 +764,7 @@ input[type="search"]::-webkit-search-cancel-button, {
   margin: 2%;
   width: 45%;
   min-width: 310px;
+  margin-top: 20px;
 }
 
 .search-results{
@@ -778,6 +779,7 @@ input[type="search"]::-webkit-search-cancel-button, {
   font-size: 20px;
   width: 350px;
   min-height: 50px;
+  margin: 0 auto;
 }
 
 .dont-appear{
