--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -773,10 +773,10 @@ input[type="search"]::-webkit-search-cancel-button, {
   z-index: 3;
   background-color: #A6ADED;
   box-shadow: 5px 5px 5px #848ABD;
-  left: 25px;
+  left: 20px;
   text-align: center;
-  padding-left: 0px;
-  font-size: 20px;
+  padding: 5px;
+  font-size: 16px;
   width: 350px;
   min-height: 50px;
   margin: 0 auto;
